--- a/goals/style.css
+++ b/goals/style.css
@@ -1,4 +1,7 @@
-iframe {
-    height: 100vh;
-    width: 100vw;
+img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid gray;
 }
