--- a/goals/style.css
+++ b/goals/style.css
@@ -4,4 +4,7 @@ img {
     top: 50%;
     transform: translate(-50%, -50%);
     border: 1px solid gray;
+    -webkit-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
 }
